logs_frontend.err
строка:1 знак:43
+ cd C:\Users\New\Desktop\sber\mvp\frontend && npm run dev
+                                           ~~
Лексема "&&" не является допустимым разделителем операторов в этой версии.
    + CategoryInfo          : ParserError: (:) [], ParentContainsErrorRecordException
    + FullyQualifiedErrorId : InvalidEndOfLine
 
(node:628) Warning: `--localstorage-file` was provided without a valid path
(Use `node --trace-warnings ...` to show where the warning was created)
 тЪа Found a change in next.config.js. Restarting the server to apply the changes...
C:\Users\New\Desktop\sber\mvp\frontend\next.config.js:12
  },
  ^

SyntaxError: Unexpected token '}'
    at wrapSafe (node:internal/modules/cjs/loader:1742:18)
    at Module._compile (node:internal/modules/cjs/loader:1785:20)
    at Object..js (node:internal/modules/cjs/loader:1942:10)
    at Module.load (node:internal/modules/cjs/loader:1532:32)
    at Module._load (node:internal/modules/cjs/loader:1334:12)
    at wrapModuleLoad (node:internal/modules/cjs/loader:255:19)
    at loadCJSModuleWithModuleLoad (node:internal/modules/esm/translators:327:3)
    at ModuleWrap.<anonymous> (node:internal/modules/esm/translators:232:7)
    at ModuleJob.run (node:internal/modules/esm/module_job:430:25)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:655:26)

Node.js v25.6.1
